--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="https://ryand91.github.io/whoami/">Rayan Das</a></h1>
-				<p style="color:rgb(80, 79, 79)"><strong>Software Engineer</strong></p>
+				<p style="color:rgb(80, 79, 79)"><strong>Shy • Geek • FOSS • Fedora • Pythonist • Kubernates • IRC: Rayan_ #dgplug • </strong></p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
