--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
-								<h3>C Programming</h3>
+								<h3> C Programming</h3>
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
@@ -201,7 +201,7 @@
 							<div class="progress-wrap ">
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
-									<span class="fa fa-star checked></span>
+									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
 									<span class="fa fa-star-o"></span>
 									<br><h3>Linux </h3>
@@ -252,9 +252,9 @@
 					               </div>
 
 					               <div class="timeline-label">
-									  <h2><a href="http://www.globalservices.bt.com/en" target="_blank">BT Global Service Pvt Ltd, Gurugram, Haryana, India</a> 
-										<br><span><strong>Network Engineer</strong></span></h2>
-					                  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Work-role: Assist on-site field engineers with network planning,desing and troubleshooting.</p>
+									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+										<br><span><strong>Assistant System Engineer</strong></span></h2>
+					                  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
 					               </div>
 					            </div>
 					         </article>
