--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 		<aside id="colorlib-aside"  class="border js-fullheight" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="https://chandankumar2010.github.io">Rayan Das</a></h1>
-				<p style="color:rgb(80, 79, 79)"><strong>Infrastructure Engineer</strong></p>
+				<h1 id="colorlib-logo"><a href="https://ryand91.github.io/whoami/">Rayan Das</a></h1>
+				<p style="color:rgb(80, 79, 79)"><strong>Software Engineer</strong></p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -328,7 +328,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong><a href="mailto:chandankumar2010@gmail.com" target="_top">chandankumar2010@gmail.com</a></strong></p>
+									<p><strong><a href="mailto:raydeeam@gmail.com" target="_top">raydeeam@gmail.com</a></strong></p>
 									
 								</div>
 							</div>
@@ -338,7 +338,7 @@
 									<i class="icon-location"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong>New Delhi, India</strong></p>
+									<p><strong>Bangalore, India</strong></p>
 								</div>
 							</div>
 						</div>
@@ -349,10 +349,10 @@
             <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
             <h1>WANT MORE OF ME?</h1>
-               <p><a href="https://twitter.com/chandan_kr000" target="_blank"><i class="icon-twitter2"></i></a>
-					<a href="https://github.com/chandankumar2010" target="_blank"><i class="icon-github"></i></a>
-					<a href="https://www.instagram.com/ninth.snail/" target="_blank"><i class="icon-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/chandnkr/" target="_blank"><i class="icon-linkedin2"></i></a></p>
+               <p><a href="https://twitter.com/raydeeam" target="_blank"><i class="icon-twitter2"></i></a>
+					<a href="https://github.com/ryand91" target="_blank"><i class="icon-github"></i></a>
+					<a href="https://www.instagram.com/hackman.91/" target="_blank"><i class="icon-instagram"></i></a>
+					<a href="https://www.linkedin.com/in/rayan-das-843265149/" target="_blank"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
             </div>
