--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
-								<h3>Troubleshooting</h3>
+								<h3>C Programming</h3>
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
@@ -153,27 +153,27 @@
 										<span class="fa fa-star checked"></span>
 										<span class="fa fa-star-o"></span>
 										<span class="fa fa-star-o"></span>
-										<br><h3>System Administration</h3>
+										<br><h3>Python</h3>
 								</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
+									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
 									<span class="fa fa-star-o"></span>
-									<span class="fa fa-star-o"></span>
-									<br><h3>Git/GitHub</h3>
+									<br><h3>C++</h3>
 								</div>
 							</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
 										<span class="fa fa-star checked"></span>
 										<span class="fa fa-star checked"></span>
+										<span class="fa fa-star checked"></span>
+										<span class="fa fa-star checked"></span>
 										<span class="fa fa-star-o"></span>
-										<span class="fa fa-star-o"></span>
-										<span class="fa fa-star-o"></span>
-										<br><h3>Active Directory</h3>
+										<br><h3>Data Structures and Algorithms</h3>
 								</div>
 								
 							</div>
@@ -181,40 +181,40 @@
 							<div class="progress-wrap">
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
+									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
 									<span class="fa fa-star-o"></span>
-									<span class="fa fa-star-o"></span>
-									<br><h3>IT-Security</h3>
+									<br><h3>Java</h3>
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
+									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
 									<span class="fa fa-star-o"></span>
-									<span class="fa fa-star-o"></span>
-									<br><h3>Networking</h3>
+									<br><h3>Git</h3>
 								</div>
 							</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap ">
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
+									<span class="fa fa-star checked></span>
 									<span class="fa fa-star-o"></span>
 									<span class="fa fa-star-o"></span>
-									<span class="fa fa-star-o"></span>
-									<br><h3>PowerShell/Linux Shell</h3>
+									<br><h3>Linux </h3>
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap ">
 										<span class="fa fa-star checked"></span>
-										<span class="fa fa-star checked"></span>
 										<span class="fa fa-star-o"></span>
 										<span class="fa fa-star-o"></span>
 										<span class="fa fa-star-o"></span>
-										<br><h3>Ruby</h3>
+										<span class="fa fa-star-o"></span>
+										<br><h3>Golang</h3>
 								</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
