--- a/index.html
+++ b/index.html
@@ -272,6 +272,39 @@
 					         </article> 
 					      </div>
 					   </div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+					 <div class="timeline-centered">
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner">
+
+							   <div class="timeline-icon color-1">
+								  <i class="icon-pen2"></i>
+							   </div>
+
+							   <div class="timeline-label">
+								  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+									<br><span><strong>Assistant System Engineer</strong></span></h2>
+								  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
+							   </div>
+							   <div class="timeline-label">
+								  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+									<br><span><strong>Assistant System Engineer</strong></span></h2>
+								<p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
+							 </div>
+							</div>
+						 </article>
+
+						 <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+							<div class="timeline-entry-inner">
+							   <div class="timeline-icon color-none">
+							   </div>
+							</div>
+						 </article> 
+					  </div>
+				   </div>
 				   </div>
 				</div>
 			</section>
