--- a/index.html
+++ b/index.html
@@ -268,37 +268,7 @@
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-none">
 					               </div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-							 <div class="timeline-centered">
-								 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-									<div class="timeline-entry-inner">
-	
-									   <div class="timeline-icon color-1">
-										  <i class="icon-pen2"></i>
-									   </div>
-	
-									   <div class="timeline-label">
-										  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
-											<br><span><strong>Assistant System Engineer</strong></span></h2>
-										  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
-									   </div>
-									   <div class="timeline-label">
-										  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
-											<br><span><strong>Assistant System Engineer</strong></span></h2>
-										<p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
-									 </div>
-									</div>
-								 </article>
-	
-								 <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
-									<div class="timeline-entry-inner">
-									   <div class="timeline-icon color-none">
-									   </div>
-									</div>	
+								</div>	
 					         </article> 
 					      </div>
 					   </div>
@@ -364,7 +334,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong><a href="mailto:raydeeam@gmail.com" target="_top">raydeeam@gmail.com</a></strong></p>
+									<p><strong><a href="mailto:rayandas91@gmail.com" target="_top">rayandas91@gmail.com</a></strong></p>
 									
 								</div>
 							</div>
