--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2>About Me</h2>
-										<p>Hi! I am B.Tech Computer Science and Engineering graduate with 2-years of industry experience as a Infrastructure Engineer.</p>
-										<p>My strongest skill is to troubleshoot tech issues but I love to explore other domains of the technology as well. Currently learning web-dev using MOOCs. I like to keep myself updated with the latest tech industry happenings. I love to experiment with new things like my experiment with:<a href="https://www.instagram.com/ninth.snail/" target="_blank"> iPhone Photography </a>, writing content on <a href="https://www.quora.com/profile/Chandan-Kr-1" target="_blank">Quora</a>, and currently trying my hands on  live streaming domain: <a href="https://www.Twitch.tv" target="_blank">Twitch</a> and tech-blog on <a href="https://www.ninthsnail.com" target="_blank">WordPress</a></p>
+										<p>Hi! I am B.Tech Computer Science and Engineering graduate currently working with Tata Consultancy Services Ltd and I'm an Open Source contributor</p>
+										<p>My strongest skill is programming but I love to explore other domains of the technology as well. Currently learning web-dev. I like to keep myself updated with the latest tech industry happenings. I love to experiment with new things. I love to write blogs. You can find my blog on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">My Blog</a>, and currently I'm learning Kubernates.</a></p>
 									</div>
 								</div>
 							</div>
@@ -85,7 +85,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-server"></i></span>
-										<h3>Infrastructure Engineering</h3>
+										<h3>Infrastructure</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
@@ -143,7 +143,7 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
-								<h3> C Programming</h3>
+									<br><h3>C Programming</h3>
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
@@ -257,9 +257,9 @@
 					                  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
-									    <br><span><strong>Assistant System Engineer</strong></span></h2>
-									<p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
+									  <h2><a href="https://www.tcs.com/" target="_blank">Fedoraproject.org</a> 
+									    <br><span><strong>Open Source Developer</strong></span></h2>
+									<p>Working with l10n, Design, Infrastructure teams<br>Working on design, coding and implementation of Fedora workstation</p>
 								 </div>
 					            </div>
 					         </article>
