--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<div class="about-desc">
 										<h2>About Me</h2>
 										<p>Hi! I am B.Tech Computer Science and Engineering graduate currently working with Tata Consultancy Services Ltd and I'm an Open Source contributor</p>
-										<p>My strongest skill is programming but I love to explore other domains of the technology as well. Currently learning web-dev. I like to keep myself updated with the latest tech industry happenings. I love to experiment with new things. I love to write blogs. You can find my blog on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">My Blog</a>, and currently I'm learning Kubernates.</a></p>
+										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. I love to write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I like connecting with people and making friends </a></p>
 									</div>
 								</div>
 							</div>
@@ -259,7 +259,7 @@
 								   <div class="timeline-label">
 									  <h2><a href="https://www.tcs.com/" target="_blank">Fedoraproject.org</a> 
 									    <br><span><strong>Open Source Developer</strong></span></h2>
-									<p>Working with l10n, Design, Infrastructure teams<br>Working on design, coding and implementation of Fedora workstation</p>
+									<p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
 								 </div>
 					            </div>
 					         </article>
@@ -296,7 +296,7 @@
 		
 										   <div class="timeline-label">
 											  <h2><a href="https://www.coursera.org/account/accomplishments/specialization/H5KZRXKHC88E
-												" target="_blank">Google IT Support Professional Certificate Specialization</a> 
+												" target="_blank">Certificate for Completion of Python Training</a> 
 												<br><span><strong>Coursera</strong></span></h2>
 											  <p>This five-course certificate, developed by Google, includes innovative curriculum designed to prepare for role in IT support. The program is part of Grow with Google, a Google initiative.</p>
 										   </div>
@@ -323,7 +323,7 @@
                         <div class="col-md-12">
 						<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 							<h2>Contact</h2>
-                            <p>If you have a challenge for me, or an opportunity, or would simply like to stay in touch, feel free to contact me!</p>
+                            <p>If you have a challenge for me, or an opportunity, or would like to meet over coffee, feel free to drop a message!</p>
 						</div>
 					</div>
                     </div>
