--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 					                  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Fedoraproject.org</a> 
+									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
 									    <br><span><strong>Open Source Developer</strong></span></h2>
 									<p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
 								 </div>
@@ -295,10 +295,10 @@
 										   </div>
 		
 										   <div class="timeline-label">
-											  <h2><a href="https://www.coursera.org/account/accomplishments/specialization/H5KZRXKHC88E
+											  <h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
 												" target="_blank">Certificate for Completion of Python Training</a> 
-												<br><span><strong>Coursera</strong></span></h2>
-											  <p>This five-course certificate, developed by Google, includes innovative curriculum designed to prepare for role in IT support. The program is part of Grow with Google, a Google initiative.</p>
+												<br><span><strong>IIT Bombay</strong></span></h2>
+											  <p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
 										   </div>
 										</div>
 									 </article>
