--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					               <div class="timeline-label">
 									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
 										<br><span><strong>Assistant System Engineer</strong></span></h2>
-					                  <p>Worked with Openreach division of the BT Group in network planning and design team.<br>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
+					                  <p>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
 								   </div>
 								   <div class="timeline-label">
 									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
