--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong><a href="mailto:rayandas91@gmail.com" target="_top">rayandas91@gmail.com</a></strong></p>
+									<p><strong><a href="mailto:raydeeam@gmail.com" target="_top">raydeeam@gmail.com</a></strong></p>
 									
 								</div>
 							</div>
