--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<div class="about-desc">
 										<h2>About Me</h2>
 										<p>Hi! I am B.Tech Computer Science and Engineering graduate currently working with Tata Consultancy Services Ltd and I'm an Open Source contributor</p>
-										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. I love to write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I like connecting with people and making friends </a></p>
+										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. I love to write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live on on IRC(nick:raydeeam) you can find me there too. I like connecting with people and making friends </a></p>
 									</div>
 								</div>
 							</div>
@@ -252,14 +252,14 @@
 					               </div>
 
 					               <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
-										<br><span><strong>Assistant System Engineer</strong></span></h2>
-					                  <p>Working on requirement analysis, design, implementation and monitoring for PwC's servers</p>
+									  <h2><a href="https://www.tcs.com/" target="_blank">Fedoraproject.org</a> 
+										<br><span><strong>Open Source Developer</strong></span></h2>
+					                  <p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
-									    <br><span><strong>Open Source Developer</strong></span></h2>
-									<p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
+									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+									    <br><span><strong>Assitant System Enginner</strong></span></h2>
+									<p>Working on requirement analysis, design, implementation and monitoring for PwC's servers </p>
 								 </div>
 					            </div>
 					         </article>
