--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2>About Me</h2>
-										<p>Hi! I am B.Tech Computer Science and Engineering graduate currently working with Tata Consultancy Services Ltd and I'm an Open Source contributor</p>
+										<p>Hi! I am B.Tech Computer Science and Engineering graduate. I'm an Open Source contributor and I work as an Engineer at Tata Consultancy Services Ltd.</p>
 										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. I love to write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live on on IRC(nick:raydeeam) you can find me there too. I like connecting with people and making friends </a></p>
 									</div>
 								</div>
