--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
 					               </div>
 
 					               <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Fedoraproject.org</a> 
+									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
 										<br><span><strong>Open Source Developer</strong></span></h2>
 					                  <p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
 									    <br><span><strong>Assitant System Enginner</strong></span></h2>
 									<p>Working on requirement analysis, design, implementation and monitoring for PwC's servers </p>
 								 </div>
