--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <h1>WANT MORE OF ME?</h1>
                <p><a href="https://twitter.com/raydeeam" target="_blank"><i class="icon-twitter2"></i></a>
 					<a href="https://github.com/ryand91" target="_blank"><i class="icon-github"></i></a>
-					<a href="https://www.instagram.com/hackman.91/" target="_blank"><i class="icon-instagram"></i></a>
+					<a href="https://www.instagram.com/whoami_hackman/" target="_blank"><i class="icon-instagram"></i></a>
 					<a href="https://www.linkedin.com/in/rayan-das-843265149/" target="_blank"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
