--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<div class="about-desc">
 										<h2>About Me</h2>
 										<p>Hi! I am B.Tech Computer Science and Engineering graduate. I'm an Open Source contributor and I work as an Engineer at Tata Consultancy Services Ltd.</p>
-										<p>My primary focus is to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. Regularly I write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live on on IRC(nick:raydeeam) you can find me there too. I like connecting with people and making friends </a></p>
+										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. Regularly I write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live in IRC(nick: raydeeam) most of the day, you can find me there too. I like connecting with people and making friends </a></p>
 									</div>
 								</div>
 							</div>
@@ -254,12 +254,12 @@
 					               <div class="timeline-label">
 									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
 										<br><span><strong>Open Source Developer</strong></span></h2>
-					                  <p>Working with l10n, Design, Infrastructure teams<br>I designe and code to make Fedora a better place for users. </p>
+					                  <p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd</a> 
+									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
 									    <br><span><strong>Assitant System Enginner</strong></span></h2>
-									<p>Responsible for overall uptime for Production and Stage environments & maintain availability and performance SLA for our client's server, application stack and infrastructure.<br>Responsible for monitor the stability of applications and servers.</p>
+									<p>Working on requirement analysis, design, implementation and monitoring for PwC's servers </p>
 								 </div>
 					            </div>
 					         </article>
@@ -281,7 +281,7 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 								<!--<span class="heading-meta">Read</span> --> 
-								<h2>Certifications</h2>
+								<h2>Co-Curricular Activities</h2>
 							</div>
 						</div>
 						<div class="row">
@@ -296,10 +296,22 @@
 		
 										   <div class="timeline-label">
 											  <h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
-												" target="_blank">Certificate for Completion of Python Training</a> 
+												" target="_blank">PyCon India</a> 
 												<br><span><strong>IIT Bombay</strong></span></h2>
 											  <p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
 										   </div>
+										   <div class="timeline-label">
+											<h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
+											  " target="_blank">RootConf India</a> 
+											  <br><span><strong>IIT Bombay</strong></span></h2>
+											<p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
+										 </div>
+										 <div class="timeline-label">
+											<h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
+											  " target="_blank">Google DevFest India</a> 
+											  <br><span><strong>IIT Bombay</strong></span></h2>
+											<p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
+										 </div>
 										</div>
 									 </article>
 		
@@ -389,3 +401,4 @@
 
 	</body>
 </html>
+
