--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<div class="about-desc">
 										<h2>About Me</h2>
 										<p>Hi! I am B.Tech Computer Science and Engineering graduate. I'm an Open Source contributor and I work as an Engineer at Tata Consultancy Services Ltd.</p>
-										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. Regularly I write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live in IRC(nick: raydeeam) most of the day, you can find me there too. I like connecting with people and making friends </a></p>
+										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. Regularly I write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live in IRC(nick: raydeeam) most of the day, you can find me there too. I like connecting with people and making friends. My areas of interest are: </a></p>
 									</div>
 								</div>
 							</div>
@@ -238,7 +238,7 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h2>Work Experience</h2>
+							<h2>I Work Here</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -254,12 +254,12 @@
 					               <div class="timeline-label">
 									  <h2><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki" target="_blank">Fedoraproject.org</a> 
 										<br><span><strong>Open Source Developer</strong></span></h2>
-					                  <p>Working with l10n, Design, Infrastructure teams<br>Working on designing, coding and implementation of Fedora workstation</p>
+					                  <p>Working with l10n, Design, Infrastructure teams<br>I design and code to make Fedora a better place for users.</p>
 								   </div>
 								   <div class="timeline-label">
-									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd, Bangalore, Karnataka, India</a> 
+									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd</a> 
 									    <br><span><strong>Assitant System Enginner</strong></span></h2>
-									<p>Working on requirement analysis, design, implementation and monitoring for PwC's servers </p>
+									<p>Responsible for overall uptime for production and stage environments & maintain availability and performance SLA for our client's server, application stack and infrastructure. <br>Responsible for monitor the stability of applications and servers. </p>
 								 </div>
 					            </div>
 					         </article>
@@ -281,7 +281,7 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 								<!--<span class="heading-meta">Read</span> --> 
-								<h2>Co-Curricular Activities</h2>
+								<h2>Other Things I Do</h2>
 							</div>
 						</div>
 						<div class="row">
@@ -295,22 +295,28 @@
 										   </div>
 		
 										   <div class="timeline-label">
-											  <h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
+											<h2><a href="https://dgplug.org/
+											  " target="_blank">Dgplug (Durgapur Linux Users Group)</a> 
+											  <br><span><strong>IRC (Internet Relay Chat)</strong></span></h2>
+											<p>I'm a part of this community.Dgplug is created by upstream contributors, our motto Learn and Teach others. We teach and help others to grow their potential and become upstream contributors. We help peoples to contribute to various upstream projects in FOSS (Free and Open Source) world. We're friends, not only in virtual world, but also in real life. We love to go to conferences together and eat a lot of food. Also we do a yearly <a href="https://foss.training" target="_blank">Summer Training</a> program. Where we help beginners to be an Open Source contributor and a better Programmer.</p>
+										 </div>
+										   <div class="timeline-label">
+											  <h2><a href="https://in.pycon.org/2019/
 												" target="_blank">PyCon India</a> 
-												<br><span><strong>IIT Bombay</strong></span></h2>
-											  <p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
+												<br><span><strong>Hyderabad, Chennai</strong></span></h2>
+											  <p>I'm a volunteer in PyCon. PyCon India is the premier conference in India on using and developing the Python programming language is conducted annually by the Python developer community. It attracts the best Python programmers from across the country and abroad.</p>
 										   </div>
 										   <div class="timeline-label">
-											<h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
-											  " target="_blank">RootConf India</a> 
-											  <br><span><strong>IIT Bombay</strong></span></h2>
-											<p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
+											<h2><a href="https://hasgeek.com/rootconf/2019/
+											  " target="_blank">RootConf</a> 
+											  <br><span><strong>Bangalore</strong></span></h2>
+											<p>I'm a part of organizing team. Rootconf is India's most well known conference on DevOps, SRE and Cloud Infrastructure, by HasGeek.</p>
 										 </div>
 										 <div class="timeline-label">
-											<h2><a href="https://drive.google.com/file/d/1_C6qK2vhAAcLQlCAz5kLP0Oyqo3HuKUG/view
+											<h2><a href="https://devfest.withgoogle.com/
 											  " target="_blank">Google DevFest India</a> 
-											  <br><span><strong>IIT Bombay</strong></span></h2>
-											<p>This was a Python certification training programm cunducted in our college by IIT Bombay</p>
+											  <br><span><strong>Bangalore</strong></span></h2>
+											<p>I've attended DevFest. GDG DevFests are community-led, developer events hosted by GDG(Google Developers Group) chapters around the globe focused on community building and learning about Google’s technologies.</p>
 										 </div>
 										</div>
 									 </article>
@@ -371,8 +377,9 @@
 					<a href="https://github.com/ryand91" target="_blank"><i class="icon-github"></i></a>
 					<a href="https://www.instagram.com/whoami_hackman/" target="_blank"><i class="icon-instagram"></i></a>
 					<a href="https://www.linkedin.com/in/rayan-das-843265149/" target="_blank"><i class="icon-linkedin2"></i></a></p>
-                <p><strong>Thanks for stopping by.</strong></p>
-            </div>
+				<p><strong>Thanks for stopping by.</strong></p>
+			</div>
+			<p>MADE BY RAYAN</p>
             </div>
             </footer>
 
