--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
-									<span class="fa fa-star-o"></span>
+									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star-o"></span>
 									<br><h3>Git</h3>
 								</div>
