--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-server"></i></span>
-										<h3>Infrastructure<br></h3>
+										<h3>Infrastructure<br><p></p></h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
