--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 								   </div>
 								   <div class="timeline-label">
 									  <h2><a href="https://www.tcs.com/" target="_blank">Tata Consultancy Serices Ltd</a> 
-									    <br><span><strong>Assitant System Enginner</strong></span></h2>
+									    <br><span><strong>Assistant System Enginner</strong></span></h2>
 									<p>Responsible for overall uptime for production and stage environments & maintain availability and performance SLA for our client's server, application stack and infrastructure. <br>Responsible for monitor the stability of applications and servers. </p>
 								 </div>
 					            </div>
