--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2>About Me</h2>
-										<p>Hi! I am B.Tech Computer Science and Engineering graduate. I'm an Open Source contributor and I work as an Infrastructure Engineer at <a href="https://code.scroll.in" target="_blank">Scroll.in Tech</a></p>
-										<p>I like to work on Open source and I am always eager for new ideas and opportunities to work on. I like to code and I try my best to improve my coding skills whenever I can. I love to experiment with new things. I write blogs. You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live in the Terminal and IRC (nick: raydeeam) most of the day, you can find me there too. I like connecting with people and making friends. My areas of interest are: </a></p>
+										<p>Hi! I am a B.Tech Computer Science and Engineering graduate. I'm an Open Source contributor and I work as an Infrastructure Engineer at <a href="https://code.scroll.in" target="_blank">Scroll.in Tech</a></p>
+										<p>I like to work on Open source and always eager for new ideas and opportunities to work on. I like to code and try my best to improve my coding skills whenever I can. I love to experiment with new things, I write blogs, You can find my blogs on <a href="https://blogs.dgplug.org/raydeeam/" target="_blank">Raydeeam's Blog</a>. I live in the Terminal and IRC (nick: raydeeam) most of the day, you can find me there too. I like connecting with people and making friends. My areas of interest are: </a></p>
 									</div>
 								</div>
 							</div>
